Translate entity names to english and correct layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="text_supervisor_text">dr. inż. Marian Kowalski</string>
     <string name="text_subject_status_text">Dostępny</string>
     <string name="text_creator_title_text">Realizujący:</string>
-    <string name="text_taken_places_text">0/1</string>
+    <string name="text_taken_up_text">0/1</string>
     <string name="text_creators_text">text_creators_text</string>
     <string name="btn_choose_text">Wybierz</string>
 
