--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,9 @@
     <string name="text_graduate_label_text">Dane dyplomanta</string>
     <string name="et_graduate_names_text">et_graduate_names_text</string>
     <string name="et_student_no_text">et_student_no_text</string>
-    <string name="et_speciality">et_speciality</string>
-    <string name="et_form">et_form</string>
+    <string name="et_speciality_text">et_speciality_text</string>
+    <string name="et_form_text">et_form_text</string>
+    <string name="et_year_text">et_year_text</string>
 
     <string name="text_declaration_label_text">Deklaracja realizacji pracy inżynierskiej</string>
     <string name="et_subject_pl_text">et_subject_pl_text</string>
