--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">System Dyplomant</string>
+    <string name="search_hint">Wyszukaj temat</string>
 
     <!--subject_list_item-->
     <string name="text_subject_title_text">Temat:</string>
